fixed scrollbar issue

--- a/app/assets/stylesheets/halls.css
+++ b/app/assets/stylesheets/halls.css
@@ -9,3 +9,4 @@ body { height: 100%; }
 .localnav li { float: left; }
 
 #content { padding: 25px; }
+.content-page { margin: 0 auto; }
